orleans/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmark-orleans
  labels:
    orleans/serviceId: benchmark-orleans
spec:
  selector:
    matchLabels:
      orleans/serviceId: benchmark-orleans
  replicas: 3
  template:
    metadata:
      labels:
        # This label is used to identify the service to Orleans
        orleans/serviceId: benchmark-orleans

        # This label is used to identify an instance of a cluster to Orleans.
        # Typically, this will be the same value as the previous label, or any 
        # fixed value.
        # In cases where you are not using rolling deployments (for example,
        # blue/green deployments),
        # this value can allow for distinct clusters which do not communicate
        # directly with each others,
        # but which still share the same storage and other resources.
        orleans/clusterId: benchmark-orleans
    spec:
      containers:
        - name: main
          image: benchmark-orleans
          # imagePullPolicy: Always
          imagePullPolicy: Never
          ports:
            # Define the ports which Orleans uses
            - containerPort: 11111
            - containerPort: 30000
            - containerPort: 80
          request:
          # Set resource requests
      terminationGracePeriodSeconds: 180
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
