orleans/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: benchmark-orleans-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: benchmark-orleans.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: benchmark-orleans
                port:
                  number: 80
